--- a/evolucaoPaciente/WebContent/WEB-INF/web.xml
+++ b/evolucaoPaciente/WebContent/WEB-INF/web.xml
@@ -21,6 +21,15 @@
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
   
+   <filter>
+	 <filter-name>LoginFilter</filter-name>
+	 <filter-class>autenticacao.LoginFilter</filter-class>
+   </filter>
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>*.jsf</url-pattern>
+	</filter-mapping>
+  
   <context-param>
 	<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
 	<param-value>true</param-value>
