--- a/tcp_web/src/configGame.properties
+++ b/tcp_web/src/configGame.properties
@@ -1,4 +1,6 @@
 # GAME'S CONFIGURATION
 
-#ip server
-prop.ip.servidor =  localhost
+# Rest Server
+
+ip.rest.server =  127.0.0.1
+port.rest.server = 8080
