--- a/tcp_web/WebContent/WEB-INF/web.xml
+++ b/tcp_web/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>tcp_web</display-name>
+  <display-name>web_domino</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -18,9 +18,8 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>/faces/*</url-pattern>
   </servlet-mapping>
-  
-  <context-param> 
-        <param-name>primefaces.THEME</param-name> 
-        <param-value>aristo</param-value> 
-	</context-param>
+  <context-param>
+    <param-name>primefaces.THEME</param-name>
+    <param-value>aristo</param-value>
+  </context-param>
 </web-app>
