--- a/tcp_web/.project
+++ b/tcp_web/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>web_domino</name>
+	<name>domino_web</name>
 	<comment></comment>
 	<projects>
 	</projects>
