--- a/domino_rest/WebContent/WEB-INF/web.xml
+++ b/domino_rest/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>UsuarioServer</display-name>
+  <display-name>domino_rest</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -19,7 +19,7 @@
     <url-pattern>/faces/*</url-pattern>
   </servlet-mapping>
   
-  <display-name>Restful Web Application</display-name>
+ <display-name>Restful Web Application</display-name>
  
 	<servlet>
 		<servlet-name>jersey-serlvet</servlet-name>
@@ -28,7 +28,7 @@
                 </servlet-class>
 		<init-param>
 		     <param-name>com.sun.jersey.config.property.packages</param-name>
-		     <param-value>main</param-value>
+		     <param-value>server</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
