--- a/tcp_web/WebContent/WEB-INF/web.xml
+++ b/tcp_web/WebContent/WEB-INF/web.xml
@@ -18,6 +18,21 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>/faces/*</url-pattern>
   </servlet-mapping>
+  
+  <filter>
+	 <filter-name>LoginFilter</filter-name>
+	 <filter-class>config.LoginFilter</filter-class>
+   </filter>
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>*.xhtml</url-pattern>
+	</filter-mapping>
+  
+  <context-param>
+	<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+	<param-value>true</param-value>
+  </context-param> 
+  
   <context-param>
     <param-name>primefaces.THEME</param-name>
     <param-value>aristo</param-value>
