--- a/count_hour/WebContent/WEB-INF/web.xml
+++ b/count_hour/WebContent/WEB-INF/web.xml
@@ -39,6 +39,6 @@
   </context-param>
   <context-param>
     <param-name>primefaces.THEME</param-name>
-    <param-value>aristo</param-value>
+    <param-value>cupertino</param-value>
   </context-param>
 </web-app>
